month and day cut

--- a/read data.ipynb
+++ b/read data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -276,6 +276,8 @@
     "phytoplankton = phytoplankton.drop([\"Route\",\n",
     "                                    \"Time_24hr\",\n",
     "                                    \"FID\",\n",
+    "                                    \"Month\",\n",
+    "                                    \"Day\",\n",
     "                                    \"family\",\n",
     "                                    \"genus\",\n",
     "                                    \"species\",\n",
@@ -295,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -326,8 +328,6 @@
        "      <th>Longitude</th>\n",
        "      <th>SampleDateUTC</th>\n",
        "      <th>Year</th>\n",
-       "      <th>Month</th>\n",
-       "      <th>Day</th>\n",
        "      <th>taxon_name</th>\n",
        "      <th>taxon_group</th>\n",
        "    </tr>\n",
@@ -340,8 +340,6 @@
        "      <td>135.3310</td>\n",
        "      <td>2020-02-27T02:01:35Z</td>\n",
        "      <td>2020</td>\n",
-       "      <td>2</td>\n",
-       "      <td>27</td>\n",
        "      <td>Steenstrupiella spp.</td>\n",
        "      <td>Ciliate</td>\n",
        "    </tr>\n",
@@ -352,8 +350,6 @@
        "      <td>135.3310</td>\n",
        "      <td>2020-02-27T02:01:35Z</td>\n",
        "      <td>2020</td>\n",
-       "      <td>2</td>\n",
-       "      <td>27</td>\n",
        "      <td>Tripos trichoceros</td>\n",
        "      <td>Dinoflagellate</td>\n",
        "    </tr>\n",
@@ -364,8 +360,6 @@
        "      <td>135.3310</td>\n",
        "      <td>2020-02-27T02:01:35Z</td>\n",
        "      <td>2020</td>\n",
-       "      <td>2</td>\n",
-       "      <td>27</td>\n",
        "      <td>Tripos furca type</td>\n",
        "      <td>Dinoflagellate</td>\n",
        "    </tr>\n",
@@ -376,8 +370,6 @@
        "      <td>134.9125</td>\n",
        "      <td>2020-02-27T03:10:21Z</td>\n",
        "      <td>2020</td>\n",
-       "      <td>2</td>\n",
-       "      <td>27</td>\n",
        "      <td>Pseudo-nitzschia seriata complex &gt;3 µm</td>\n",
        "      <td>Pennate diatom</td>\n",
        "    </tr>\n",
@@ -388,8 +380,6 @@
        "      <td>134.9125</td>\n",
        "      <td>2020-02-27T03:10:21Z</td>\n",
        "      <td>2020</td>\n",
-       "      <td>2</td>\n",
-       "      <td>27</td>\n",
        "      <td>Tripos macroceros type</td>\n",
        "      <td>Dinoflagellate</td>\n",
        "    </tr>\n",
@@ -398,12 +388,12 @@
        "</div>"
       ],
       "text/plain": [
-       "         id  Latitude  Longitude         SampleDateUTC  Year  Month  Day  \\\n",
-       "0  30880720  -37.9138   135.3310  2020-02-27T02:01:35Z  2020      2   27   \n",
-       "1  30880722  -37.9138   135.3310  2020-02-27T02:01:35Z  2020      2   27   \n",
-       "2  30880721  -37.9138   135.3310  2020-02-27T02:01:35Z  2020      2   27   \n",
-       "3  30880726  -37.8766   134.9125  2020-02-27T03:10:21Z  2020      2   27   \n",
-       "4  30880727  -37.8766   134.9125  2020-02-27T03:10:21Z  2020      2   27   \n",
+       "         id  Latitude  Longitude         SampleDateUTC  Year  \\\n",
+       "0  30880720  -37.9138   135.3310  2020-02-27T02:01:35Z  2020   \n",
+       "1  30880722  -37.9138   135.3310  2020-02-27T02:01:35Z  2020   \n",
+       "2  30880721  -37.9138   135.3310  2020-02-27T02:01:35Z  2020   \n",
+       "3  30880726  -37.8766   134.9125  2020-02-27T03:10:21Z  2020   \n",
+       "4  30880727  -37.8766   134.9125  2020-02-27T03:10:21Z  2020   \n",
        "\n",
        "                               taxon_name     taxon_group  \n",
        "0                    Steenstrupiella spp.         Ciliate  \n",
@@ -413,7 +403,7 @@
        "4                  Tripos macroceros type  Dinoflagellate  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -472,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
@@ -483,6 +473,8 @@
     "                                \"Route\",\n",
     "                                \"Time_24hr\",\n",
     "                                \"family\",\n",
+    "                                \"Month\",\n",
+    "                                \"Day\",\n",
     "                                \"genus\",\n",
     "                                \"species\",\n",
     "                                \"sex\",\n",
@@ -504,9 +496,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -535,8 +527,6 @@
        "      <th>Longitude</th>\n",
        "      <th>SampleDateUTC</th>\n",
        "      <th>Year</th>\n",
-       "      <th>Month</th>\n",
-       "      <th>Day</th>\n",
        "      <th>taxon_name</th>\n",
        "      <th>taxon_group</th>\n",
        "      <th>taxon_per_m3</th>\n",
@@ -550,8 +540,6 @@
        "      <td>135.3310</td>\n",
        "      <td>2020-02-27T02:01:35Z</td>\n",
        "      <td>2020</td>\n",
-       "      <td>2</td>\n",
-       "      <td>27</td>\n",
        "      <td>Calanoid j</td>\n",
        "      <td>COPEPOD</td>\n",
        "      <td>2.0000</td>\n",
@@ -563,8 +551,6 @@
        "      <td>135.3310</td>\n",
        "      <td>2020-02-27T02:01:35Z</td>\n",
        "      <td>2020</td>\n",
-       "      <td>2</td>\n",
-       "      <td>27</td>\n",
        "      <td>Chaetognatha</td>\n",
        "      <td>NON-COPEPOD</td>\n",
        "      <td>0.6667</td>\n",
@@ -576,8 +562,6 @@
        "      <td>135.3310</td>\n",
        "      <td>2020-02-27T02:01:35Z</td>\n",
        "      <td>2020</td>\n",
-       "      <td>2</td>\n",
-       "      <td>27</td>\n",
        "      <td>Foraminifera</td>\n",
        "      <td>NON-COPEPOD</td>\n",
        "      <td>1.3333</td>\n",
@@ -589,8 +573,6 @@
        "      <td>135.3310</td>\n",
        "      <td>2020-02-27T02:01:35Z</td>\n",
        "      <td>2020</td>\n",
-       "      <td>2</td>\n",
-       "      <td>27</td>\n",
        "      <td>Oithona spp. j</td>\n",
        "      <td>COPEPOD</td>\n",
        "      <td>4.0000</td>\n",
@@ -602,8 +584,6 @@
        "      <td>134.9125</td>\n",
        "      <td>2020-02-27T03:10:21Z</td>\n",
        "      <td>2020</td>\n",
-       "      <td>2</td>\n",
-       "      <td>27</td>\n",
        "      <td>Oithona plumifera f</td>\n",
        "      <td>COPEPOD</td>\n",
        "      <td>0.6667</td>\n",
@@ -613,12 +593,12 @@
        "</div>"
       ],
       "text/plain": [
-       "         id  Latitude  Longitude         SampleDateUTC  Year  Month  Day  \\\n",
-       "0  60974299  -37.9138   135.3310  2020-02-27T02:01:35Z  2020      2   27   \n",
-       "1  60974379  -37.9138   135.3310  2020-02-27T02:01:35Z  2020      2   27   \n",
-       "2  60974380  -37.9138   135.3310  2020-02-27T02:01:35Z  2020      2   27   \n",
-       "3  60974378  -37.9138   135.3310  2020-02-27T02:01:35Z  2020      2   27   \n",
-       "4  60974296  -37.8766   134.9125  2020-02-27T03:10:21Z  2020      2   27   \n",
+       "         id  Latitude  Longitude         SampleDateUTC  Year  \\\n",
+       "0  60974299  -37.9138   135.3310  2020-02-27T02:01:35Z  2020   \n",
+       "1  60974379  -37.9138   135.3310  2020-02-27T02:01:35Z  2020   \n",
+       "2  60974380  -37.9138   135.3310  2020-02-27T02:01:35Z  2020   \n",
+       "3  60974378  -37.9138   135.3310  2020-02-27T02:01:35Z  2020   \n",
+       "4  60974296  -37.8766   134.9125  2020-02-27T03:10:21Z  2020   \n",
        "\n",
        "            taxon_name  taxon_group  taxon_per_m3  \n",
        "0           Calanoid j      COPEPOD        2.0000  \n",
@@ -628,7 +608,7 @@
        "4  Oithona plumifera f      COPEPOD        0.6667  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -675,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -698,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -855,7 +835,7 @@
        "[27632 rows x 5 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -866,14 +846,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "# Create an engine for the plankton.sqlite database\n",
-    "engine = create_engine(\"sqlite:///planktontest.sqlite\", echo=False)\n",
+    "engine = create_engine(\"sqlite:///planktontest2.sqlite\", echo=False)\n",
     "conn = engine.connect()"
    ]
   },
@@ -904,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
