--- a/read data.ipynb
+++ b/read data.ipynb
@@ -273,7 +273,8 @@
    "outputs": [],
    "source": [
     "#drop unneeded columns for phytoplankton\n",
-    "phytoplankton = phytoplankton.drop([\"Route\",\n",
+    "phytoplankton = phytoplankton.drop([\"id\",\n",
+    "                                    \"Route\",\n",
     "                                    \"Time_24hr\",\n",
     "                                    \"FID\",\n",
     "                                    \"Month\",\n",
@@ -323,7 +324,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>id</th>\n",
        "      <th>Latitude</th>\n",
        "      <th>Longitude</th>\n",
        "      <th>SampleDateUTC</th>\n",
@@ -335,7 +335,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>30880720</td>\n",
        "      <td>-37.9138</td>\n",
        "      <td>135.3310</td>\n",
        "      <td>2020-02-27T02:01:35Z</td>\n",
@@ -345,7 +344,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>30880722</td>\n",
        "      <td>-37.9138</td>\n",
        "      <td>135.3310</td>\n",
        "      <td>2020-02-27T02:01:35Z</td>\n",
@@ -355,7 +353,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>30880721</td>\n",
        "      <td>-37.9138</td>\n",
        "      <td>135.3310</td>\n",
        "      <td>2020-02-27T02:01:35Z</td>\n",
@@ -365,7 +362,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>30880726</td>\n",
        "      <td>-37.8766</td>\n",
        "      <td>134.9125</td>\n",
        "      <td>2020-02-27T03:10:21Z</td>\n",
@@ -375,7 +371,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>30880727</td>\n",
        "      <td>-37.8766</td>\n",
        "      <td>134.9125</td>\n",
        "      <td>2020-02-27T03:10:21Z</td>\n",
@@ -388,12 +383,12 @@
        "</div>"
       ],
       "text/plain": [
-       "         id  Latitude  Longitude         SampleDateUTC  Year  \\\n",
-       "0  30880720  -37.9138   135.3310  2020-02-27T02:01:35Z  2020   \n",
-       "1  30880722  -37.9138   135.3310  2020-02-27T02:01:35Z  2020   \n",
-       "2  30880721  -37.9138   135.3310  2020-02-27T02:01:35Z  2020   \n",
-       "3  30880726  -37.8766   134.9125  2020-02-27T03:10:21Z  2020   \n",
-       "4  30880727  -37.8766   134.9125  2020-02-27T03:10:21Z  2020   \n",
+       "   Latitude  Longitude         SampleDateUTC  Year  \\\n",
+       "0  -37.9138   135.3310  2020-02-27T02:01:35Z  2020   \n",
+       "1  -37.9138   135.3310  2020-02-27T02:01:35Z  2020   \n",
+       "2  -37.9138   135.3310  2020-02-27T02:01:35Z  2020   \n",
+       "3  -37.8766   134.9125  2020-02-27T03:10:21Z  2020   \n",
+       "4  -37.8766   134.9125  2020-02-27T03:10:21Z  2020   \n",
        "\n",
        "                               taxon_name     taxon_group  \n",
        "0                    Steenstrupiella spp.         Ciliate  \n",
@@ -469,7 +464,8 @@
    "outputs": [],
    "source": [
     "#drop unneeded columns for zooplankton\n",
-    "zooplankton = zooplankton.drop([\"FID\",\n",
+    "zooplankton = zooplankton.drop([\"id\",\n",
+    "                                \"FID\",\n",
     "                                \"Route\",\n",
     "                                \"Time_24hr\",\n",
     "                                \"family\",\n",
@@ -522,7 +518,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>id</th>\n",
        "      <th>Latitude</th>\n",
        "      <th>Longitude</th>\n",
        "      <th>SampleDateUTC</th>\n",
@@ -535,7 +530,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>60974299</td>\n",
        "      <td>-37.9138</td>\n",
        "      <td>135.3310</td>\n",
        "      <td>2020-02-27T02:01:35Z</td>\n",
@@ -546,7 +540,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>60974379</td>\n",
        "      <td>-37.9138</td>\n",
        "      <td>135.3310</td>\n",
        "      <td>2020-02-27T02:01:35Z</td>\n",
@@ -557,7 +550,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>60974380</td>\n",
        "      <td>-37.9138</td>\n",
        "      <td>135.3310</td>\n",
        "      <td>2020-02-27T02:01:35Z</td>\n",
@@ -568,7 +560,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>60974378</td>\n",
        "      <td>-37.9138</td>\n",
        "      <td>135.3310</td>\n",
        "      <td>2020-02-27T02:01:35Z</td>\n",
@@ -579,7 +570,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>60974296</td>\n",
        "      <td>-37.8766</td>\n",
        "      <td>134.9125</td>\n",
        "      <td>2020-02-27T03:10:21Z</td>\n",
@@ -593,19 +583,19 @@
        "</div>"
       ],
       "text/plain": [
-       "         id  Latitude  Longitude         SampleDateUTC  Year  \\\n",
-       "0  60974299  -37.9138   135.3310  2020-02-27T02:01:35Z  2020   \n",
-       "1  60974379  -37.9138   135.3310  2020-02-27T02:01:35Z  2020   \n",
-       "2  60974380  -37.9138   135.3310  2020-02-27T02:01:35Z  2020   \n",
-       "3  60974378  -37.9138   135.3310  2020-02-27T02:01:35Z  2020   \n",
-       "4  60974296  -37.8766   134.9125  2020-02-27T03:10:21Z  2020   \n",
+       "   Latitude  Longitude         SampleDateUTC  Year           taxon_name  \\\n",
+       "0  -37.9138   135.3310  2020-02-27T02:01:35Z  2020           Calanoid j   \n",
+       "1  -37.9138   135.3310  2020-02-27T02:01:35Z  2020         Chaetognatha   \n",
+       "2  -37.9138   135.3310  2020-02-27T02:01:35Z  2020         Foraminifera   \n",
+       "3  -37.9138   135.3310  2020-02-27T02:01:35Z  2020       Oithona spp. j   \n",
+       "4  -37.8766   134.9125  2020-02-27T03:10:21Z  2020  Oithona plumifera f   \n",
        "\n",
-       "            taxon_name  taxon_group  taxon_per_m3  \n",
-       "0           Calanoid j      COPEPOD        2.0000  \n",
-       "1         Chaetognatha  NON-COPEPOD        0.6667  \n",
-       "2         Foraminifera  NON-COPEPOD        1.3333  \n",
-       "3       Oithona spp. j      COPEPOD        4.0000  \n",
-       "4  Oithona plumifera f      COPEPOD        0.6667  "
+       "   taxon_group  taxon_per_m3  \n",
+       "0      COPEPOD        2.0000  \n",
+       "1  NON-COPEPOD        0.6667  \n",
+       "2  NON-COPEPOD        1.3333  \n",
+       "3      COPEPOD        4.0000  \n",
+       "4      COPEPOD        0.6667  "
       ]
      },
      "execution_count": 8,
@@ -853,13 +843,13 @@
    "outputs": [],
    "source": [
     "# Create an engine for the plankton.sqlite database\n",
-    "engine = create_engine(\"sqlite:///planktontest2.sqlite\", echo=False)\n",
+    "engine = create_engine(\"sqlite:///planktontest3.sqlite\", echo=False)\n",
     "conn = engine.connect()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -872,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -884,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -895,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -905,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -914,7 +904,7 @@
        "[]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -928,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -936,14 +926,14 @@
     {
      "data": {
       "text/plain": [
-       "[(0, 'soop_auscpr_zoop_flat_map.fid--620ea8f0_17a9a6b7f95_-53b3', 60974299, 'ABAB', -37.9138, 135.33100000000002, '2020-02-27T02:01:35Z', 2020, 2, 27, '02:01:35', 'Calanoid j', None, None, None, 'COPEPOD', 'POINT (135.33099 -37.91378)'),\n",
-       " (1, 'soop_auscpr_zoop_flat_map.fid--620ea8f0_17a9a6b7f95_-53b2', 60974379, 'ABAB', -37.9138, 135.33100000000002, '2020-02-27T02:01:35Z', 2020, 2, 27, '02:01:35', 'Chaetognatha', None, None, None, 'NON-COPEPOD', 'POINT (135.33099 -37.91378)'),\n",
-       " (2, 'soop_auscpr_zoop_flat_map.fid--620ea8f0_17a9a6b7f95_-53b1', 60974380, 'ABAB', -37.9138, 135.33100000000002, '2020-02-27T02:01:35Z', 2020, 2, 27, '02:01:35', 'Foraminifera', None, None, None, 'NON-COPEPOD', 'POINT (135.33099 -37.91378)'),\n",
-       " (3, 'soop_auscpr_zoop_flat_map.fid--620ea8f0_17a9a6b7f95_-53b0', 60974378, 'ABAB', -37.9138, 135.33100000000002, '2020-02-27T02:01:35Z', 2020, 2, 27, '02:01:35', 'Oithona spp. j', 'Oithonidae', 'Oithona', 'spp.', 'COPEPOD', 'POINT (135.33099 -37.91378)'),\n",
-       " (4, 'soop_auscpr_zoop_flat_map.fid--620ea8f0_17a9a6b7f95_-53af', 60974296, 'ABAB', -37.8766, 134.9125, '2020-02-27T03:10:21Z', 2020, 2, 27, '03:10:21', 'Oithona plumifera f', 'Oithonidae', 'Oithona', 'plumifera', 'COPEPOD', 'POINT (134.91247 -37.87656)')]"
+       "[(0, -37.9138, 135.33100000000002, '2020-02-27T02:01:35Z', 2020, 'Calanoid j', 'COPEPOD', 2.0),\n",
+       " (1, -37.9138, 135.33100000000002, '2020-02-27T02:01:35Z', 2020, 'Chaetognatha', 'NON-COPEPOD', 0.6667),\n",
+       " (2, -37.9138, 135.33100000000002, '2020-02-27T02:01:35Z', 2020, 'Foraminifera', 'NON-COPEPOD', 1.3333),\n",
+       " (3, -37.9138, 135.33100000000002, '2020-02-27T02:01:35Z', 2020, 'Oithona spp. j', 'COPEPOD', 4.0),\n",
+       " (4, -37.8766, 134.9125, '2020-02-27T03:10:21Z', 2020, 'Oithona plumifera f', 'COPEPOD', 0.6667)]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -955,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -965,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -990,154 +980,86 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>index</th>\n",
-       "      <th>id</th>\n",
-       "      <th>Route</th>\n",
        "      <th>Latitude</th>\n",
        "      <th>Longitude</th>\n",
        "      <th>SampleDateUTC</th>\n",
        "      <th>Year</th>\n",
-       "      <th>Month</th>\n",
-       "      <th>Day</th>\n",
-       "      <th>Time_24hr</th>\n",
        "      <th>taxon_name</th>\n",
-       "      <th>family</th>\n",
-       "      <th>genus</th>\n",
-       "      <th>species</th>\n",
        "      <th>taxon_group</th>\n",
-       "      <th>geom</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>30880720</td>\n",
-       "      <td>ABAB</td>\n",
        "      <td>-37.9138</td>\n",
        "      <td>135.3310</td>\n",
        "      <td>2020-02-27T02:01:35Z</td>\n",
        "      <td>2020</td>\n",
-       "      <td>2</td>\n",
-       "      <td>27</td>\n",
-       "      <td>02:01:35</td>\n",
        "      <td>Steenstrupiella spp.</td>\n",
-       "      <td>Tintinnidae</td>\n",
-       "      <td>Steenstrupiella</td>\n",
-       "      <td>spp.</td>\n",
        "      <td>Ciliate</td>\n",
-       "      <td>POINT (135.33099 -37.91378)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>30880722</td>\n",
-       "      <td>ABAB</td>\n",
        "      <td>-37.9138</td>\n",
        "      <td>135.3310</td>\n",
        "      <td>2020-02-27T02:01:35Z</td>\n",
        "      <td>2020</td>\n",
-       "      <td>2</td>\n",
-       "      <td>27</td>\n",
-       "      <td>02:01:35</td>\n",
        "      <td>Tripos trichoceros</td>\n",
-       "      <td>Ceratiaceae</td>\n",
-       "      <td>Tripos (Tripoceratium)</td>\n",
-       "      <td>trichoceros</td>\n",
        "      <td>Dinoflagellate</td>\n",
-       "      <td>POINT (135.33099 -37.91378)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>30880721</td>\n",
-       "      <td>ABAB</td>\n",
        "      <td>-37.9138</td>\n",
        "      <td>135.3310</td>\n",
        "      <td>2020-02-27T02:01:35Z</td>\n",
        "      <td>2020</td>\n",
-       "      <td>2</td>\n",
-       "      <td>27</td>\n",
-       "      <td>02:01:35</td>\n",
        "      <td>Tripos furca type</td>\n",
-       "      <td>Ceratiaceae</td>\n",
-       "      <td>Tripos (Ceratium)</td>\n",
-       "      <td>furca type</td>\n",
        "      <td>Dinoflagellate</td>\n",
-       "      <td>POINT (135.33099 -37.91378)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>30880726</td>\n",
-       "      <td>ABAB</td>\n",
        "      <td>-37.8766</td>\n",
        "      <td>134.9125</td>\n",
        "      <td>2020-02-27T03:10:21Z</td>\n",
        "      <td>2020</td>\n",
-       "      <td>2</td>\n",
-       "      <td>27</td>\n",
-       "      <td>03:10:21</td>\n",
        "      <td>Pseudo-nitzschia seriata complex &gt;3 µm</td>\n",
-       "      <td>Bacillariaceae</td>\n",
-       "      <td>Pseudo-nitzschia</td>\n",
-       "      <td>seriata complex</td>\n",
        "      <td>Pennate diatom</td>\n",
-       "      <td>POINT (134.91247 -37.87656)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>30880727</td>\n",
-       "      <td>ABAB</td>\n",
        "      <td>-37.8766</td>\n",
        "      <td>134.9125</td>\n",
        "      <td>2020-02-27T03:10:21Z</td>\n",
        "      <td>2020</td>\n",
-       "      <td>2</td>\n",
-       "      <td>27</td>\n",
-       "      <td>03:10:21</td>\n",
        "      <td>Tripos macroceros type</td>\n",
-       "      <td>Ceratiaceae</td>\n",
-       "      <td>Tripos (Tripoceratium)</td>\n",
-       "      <td>macroceros type</td>\n",
        "      <td>Dinoflagellate</td>\n",
-       "      <td>POINT (134.91247 -37.87656)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   index        id Route  Latitude  Longitude         SampleDateUTC  Year  \\\n",
-       "0      0  30880720  ABAB  -37.9138   135.3310  2020-02-27T02:01:35Z  2020   \n",
-       "1      1  30880722  ABAB  -37.9138   135.3310  2020-02-27T02:01:35Z  2020   \n",
-       "2      2  30880721  ABAB  -37.9138   135.3310  2020-02-27T02:01:35Z  2020   \n",
-       "3      3  30880726  ABAB  -37.8766   134.9125  2020-02-27T03:10:21Z  2020   \n",
-       "4      4  30880727  ABAB  -37.8766   134.9125  2020-02-27T03:10:21Z  2020   \n",
+       "   index  Latitude  Longitude         SampleDateUTC  Year  \\\n",
+       "0      0  -37.9138   135.3310  2020-02-27T02:01:35Z  2020   \n",
+       "1      1  -37.9138   135.3310  2020-02-27T02:01:35Z  2020   \n",
+       "2      2  -37.9138   135.3310  2020-02-27T02:01:35Z  2020   \n",
+       "3      3  -37.8766   134.9125  2020-02-27T03:10:21Z  2020   \n",
+       "4      4  -37.8766   134.9125  2020-02-27T03:10:21Z  2020   \n",
        "\n",
-       "   Month  Day Time_24hr                              taxon_name  \\\n",
-       "0      2   27  02:01:35                    Steenstrupiella spp.   \n",
-       "1      2   27  02:01:35                      Tripos trichoceros   \n",
-       "2      2   27  02:01:35                       Tripos furca type   \n",
-       "3      2   27  03:10:21  Pseudo-nitzschia seriata complex >3 µm   \n",
-       "4      2   27  03:10:21                  Tripos macroceros type   \n",
-       "\n",
-       "           family                   genus          species     taxon_group  \\\n",
-       "0     Tintinnidae         Steenstrupiella             spp.         Ciliate   \n",
-       "1     Ceratiaceae  Tripos (Tripoceratium)      trichoceros  Dinoflagellate   \n",
-       "2     Ceratiaceae       Tripos (Ceratium)       furca type  Dinoflagellate   \n",
-       "3  Bacillariaceae        Pseudo-nitzschia  seriata complex  Pennate diatom   \n",
-       "4     Ceratiaceae  Tripos (Tripoceratium)  macroceros type  Dinoflagellate   \n",
-       "\n",
-       "                          geom  \n",
-       "0  POINT (135.33099 -37.91378)  \n",
-       "1  POINT (135.33099 -37.91378)  \n",
-       "2  POINT (135.33099 -37.91378)  \n",
-       "3  POINT (134.91247 -37.87656)  \n",
-       "4  POINT (134.91247 -37.87656)  "
+       "                               taxon_name     taxon_group  \n",
+       "0                    Steenstrupiella spp.         Ciliate  \n",
+       "1                      Tripos trichoceros  Dinoflagellate  \n",
+       "2                       Tripos furca type  Dinoflagellate  \n",
+       "3  Pseudo-nitzschia seriata complex >3 µm  Pennate diatom  \n",
+       "4                  Tripos macroceros type  Dinoflagellate  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
