top 4 routes only

--- a/read data.ipynb
+++ b/read data.ipynb
@@ -632,9 +632,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -738,7 +738,7 @@
        "4        3333.3  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -749,13 +749,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "phyto_main_routes = phytoplankton.loc[((phytoplankton['Route'] == \"ANHO\") |\n",
     "        (phytoplankton[\"Route\"] == 'BRSY')|\n",
-    "        (phytoplankton[\"Route\"] == 'BRPK')|\n",
     "        (phytoplankton[\"Route\"] == 'HOAN')|\n",
     "        (phytoplankton[\"Route\"] == 'PKME')|\n",
     "        (phytoplankton[\"Route\"] == 'MEAD')), :]"
@@ -767,7 +766,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#ANHO, BRPK, BRSY, HOAN, MEAD, PKME,"
+    "#ANHO, BRSY, HOAN, MEAD, PKME,"
    ]
   },
   {
@@ -1696,26 +1695,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#ANHO, BRPK, BRSY, HOAN, MEAD, PKME,"
+    "#ANHO, BRSY, HOAN, MEAD"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "zoo_main_routes = zooplankton.loc[((zooplankton['Route'] == \"ANHO\") |\n",
     "        (zooplankton[\"Route\"] == 'BRSY')|\n",
-    "        (zooplankton[\"Route\"] == 'BRPK')|\n",
     "        (zooplankton[\"Route\"] == 'HOAN')|\n",
-    "        (zooplankton[\"Route\"] == 'PKME')|\n",
     "        (zooplankton[\"Route\"] == 'MEAD')), :]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1728,11 +1725,11 @@
        "5588   ANHO  -60.0961    89.6107  2007-11-25T07:53:00Z  2007      COPEPOD   \n",
        "5589   ANHO  -60.0961    89.6107  2007-11-25T07:53:00Z  2007      COPEPOD   \n",
        "...     ...       ...        ...                   ...   ...          ...   \n",
-       "95245  PKME  -39.1421   146.5224  2020-08-02T09:38:45Z  2020      COPEPOD   \n",
-       "95246  PKME  -39.1421   146.5224  2020-08-02T09:38:45Z  2020  NON-COPEPOD   \n",
-       "95247  PKME  -39.1421   146.5224  2020-08-02T09:38:45Z  2020  NON-COPEPOD   \n",
-       "95248  PKME  -39.1421   146.5224  2020-08-02T09:38:45Z  2020      COPEPOD   \n",
-       "95249  PKME  -39.1421   146.5224  2020-08-02T09:38:45Z  2020      COPEPOD   \n",
+       "83108  MEAD  -36.9881   137.0603  2020-04-18T04:55:33Z  2020  NON-COPEPOD   \n",
+       "83109  MEAD  -36.9881   137.0603  2020-04-18T04:55:33Z  2020      COPEPOD   \n",
+       "83110  MEAD  -36.9881   137.0603  2020-04-18T04:55:33Z  2020      COPEPOD   \n",
+       "83111  MEAD  -36.9881   137.0603  2020-04-18T04:55:33Z  2020      COPEPOD   \n",
+       "83112  MEAD  -36.9881   137.0603  2020-04-18T04:55:33Z  2020      COPEPOD   \n",
        "\n",
        "       taxon_per_m3  \n",
        "5585         2.0000  \n",
@@ -1741,16 +1738,16 @@
        "5588         3.3333  \n",
        "5589         2.6667  \n",
        "...             ...  \n",
-       "95245        5.3333  \n",
-       "95246        0.6667  \n",
-       "95247        0.6667  \n",
-       "95248        0.6667  \n",
-       "95249        1.3333  \n",
+       "83108        0.6667  \n",
+       "83109        4.0000  \n",
+       "83110        0.6667  \n",
+       "83111        0.6667  \n",
+       "83112        2.6667  \n",
        "\n",
-       "[64205 rows x 7 columns]>"
+       "[44512 rows x 7 columns]>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
