--- a/read data.ipynb
+++ b/read data.ipynb
@@ -749,14 +749,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "phyto_main_routes = phytoplankton.loc[((phytoplankton['Route'] == \"ANHO\") |\n",
     "        (phytoplankton[\"Route\"] == 'BRSY')|\n",
     "        (phytoplankton[\"Route\"] == 'HOAN')|\n",
-    "        (phytoplankton[\"Route\"] == 'PKME')|\n",
+    "#        (phytoplankton[\"Route\"] == 'PKME')|\n",
     "        (phytoplankton[\"Route\"] == 'MEAD')), :]"
    ]
   },
@@ -888,14 +888,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['ANHO' 'BRSY' 'HOAN' 'MEAD' 'PKME']\n"
+      "['ANHO' 'BRSY' 'HOAN' 'MEAD']\n"
      ]
     }
    ],
@@ -1700,20 +1700,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "zoo_main_routes = zooplankton.loc[((zooplankton['Route'] == \"ANHO\") |\n",
     "        (zooplankton[\"Route\"] == 'BRSY')|\n",
     "        (zooplankton[\"Route\"] == 'HOAN')|\n",
-    "        (zooplankton[\"Route\"] == 'PKME')|\n",
+    "#        (zooplankton[\"Route\"] == 'PKME')|\n",
     "        (zooplankton[\"Route\"] == 'MEAD')), :]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 39,
    "metadata": {
     "scrolled": false
    },
@@ -1819,7 +1819,7 @@
        "5589        2.6667  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1948,7 +1948,9 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2238,7 +2240,7 @@
    "outputs": [],
    "source": [
     "# Create an engine for the plankton.sqlite database\n",
-    "engine = create_engine(\"sqlite:///planktontest9.sqlite\", echo=False)\n",
+    "engine = create_engine(\"sqlite:///planktontest10.sqlite\", echo=False)\n",
     "conn = engine.connect()"
    ]
   },
